Add dropdown to select vacation

--- a/TripPlanner/AppShell.xaml
+++ b/TripPlanner/AppShell.xaml
@@ -5,9 +5,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:sf="clr-namespace:Syncfusion.Maui.Toolkit.SegmentedControl;assembly=Syncfusion.Maui.Toolkit"
     xmlns:pages="clr-namespace:TripPlanner.Pages"
+    xmlns:controls="clr-namespace:TripPlanner.Pages.Controls"
     Shell.FlyoutBehavior="Flyout"
     Title="TripPlanner">
 
+    <Shell.FlyoutHeader>
+        <controls:VacationComboBox Margin="10" />
+    </Shell.FlyoutHeader>
+    
     <ShellContent
         Title="Dashboard"
         Icon="{StaticResource IconDashboard}"
