Added a dataform to create a new vacation but it doesnt commit or validate

--- a/TripPlanner/Pages/NewVacationForm.xaml
+++ b/TripPlanner/Pages/NewVacationForm.xaml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:sf="clr-namespace:Syncfusion.Maui.DataForm;assembly=Syncfusion.Maui.DataForm"
+             xmlns:model="clr-namespace:TripPlanner.PageModels"
              x:Class="TripPlanner.Pages.NewVacationPage"
-             Title="NewVacationForm">
-    <VerticalStackLayout MaximumWidthRequest="500">
+             Title="Create Vacation">
+    <ContentPage.BindingContext>
+        <model:NewVacationPageModel />
+    </ContentPage.BindingContext>
+
+    <sf:SfDataForm DataObject="{Binding Vacation}" 
+                   LayoutType="TextInputLayout"
+                   ValidationMode="PropertyChanged"
+                   CommitMode="LostFocus" />
+
+    <!--<VerticalStackLayout MaximumWidthRequest="500">
         <Entry Placeholder="Vacation Name"
                Margin="20,10,20,0" />
         <HorizontalStackLayout Margin="20, 10, 20, 0">
@@ -12,5 +23,5 @@
             <Label Text="End Date:" VerticalTextAlignment="Center" Margin="40, 0, 0, 0" />
             <DatePicker Margin="10, 0, 0, 0" />
         </HorizontalStackLayout>
-    </VerticalStackLayout>
+    </VerticalStackLayout>-->
 </ContentPage>
