--- a/TripPlanner/Pages/NewVacationForm.xaml
+++ b/TripPlanner/Pages/NewVacationForm.xaml
@@ -4,24 +4,11 @@
              xmlns:sf="clr-namespace:Syncfusion.Maui.DataForm;assembly=Syncfusion.Maui.DataForm"
              xmlns:model="clr-namespace:TripPlanner.PageModels"
              x:Class="TripPlanner.Pages.NewVacationPage"
+             x:DataType="model:NewVacationPageModel"
              Title="Create Vacation">
-    <ContentPage.BindingContext>
-        <model:NewVacationPageModel />
-    </ContentPage.BindingContext>
 
     <sf:SfDataForm DataObject="{Binding Vacation}" 
                    LayoutType="TextInputLayout"
                    ValidationMode="PropertyChanged"
-                   CommitMode="LostFocus" />
-
-    <!--<VerticalStackLayout MaximumWidthRequest="500">
-        <Entry Placeholder="Vacation Name"
-               Margin="20,10,20,0" />
-        <HorizontalStackLayout Margin="20, 10, 20, 0">
-            <Label Text="Start Date:" VerticalTextAlignment="Center" />
-            <DatePicker Margin="10, 0, 0, 0" />
-            <Label Text="End Date:" VerticalTextAlignment="Center" Margin="40, 0, 0, 0" />
-            <DatePicker Margin="10, 0, 0, 0" />
-        </HorizontalStackLayout>
-    </VerticalStackLayout>-->
+                   CommitMode="PropertyChanged" />
 </ContentPage>
